# alanco-petshop

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: petshop-deploy-dev.yml
PRD/: petshop-prd.md
apps/petshop_web/lib/: main.dart
docs/: getting-started.md
docs/product/: prd.md
infra/petshop/: main.tf
src/petshop/: __init__.py
src/petshop_api/: main.py
src/petshop_api/contracts/: work_item.py
src/petshop_api/services/: workspace_service.py
tests/: test_smoke.py
tests/petshop_api/: test_health.py
tests/petshop_web/: playwright.config.ts
tests/petshop_web/playwright/: home.spec.ts
