[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petshop"
version = "0.1.0"
description = "Backlog from PRD d1726c1c-3e03-4cd8-a6ab-d21638899831"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
  "bandit>=1.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/petshop"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
