[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petshop"
version = "0.1.0"
description = "Generated customer application scaffold for Petshop."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/petshop_api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
